# zombie-package-detector

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
detector/: __main__.py  config.py  github_client.py  health_checker.py  parser.py  pypi_client.py  report.py
